Update deps and switch to records
Since java 14 records are a built in way to declare data holding objects. To find out more about it: https://docs.oracle.com/en/java/javase/14/language/records.html
