# src/main/java/com/github/diabetesassistant/presentation/TokenCreationRequestDTO.java
@@ -1,0 +1,3 @@
+package com.github.diabetesassistant.presentation;
+
+public record TokenCreationRequestDTO(String email, String password) {}
